[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PowerBar.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Indicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/PowerBar/bar.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 10 )

[node name="PowerBar" type="Sprite"]
script = ExtResource( 1 )

[node name="bar" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Sides" type="Area2D" parent="."]
position = Vector2( -49.8383, 427.501 )
collision_layer = 2
collision_mask = 7

[node name="LeftSideCollision" type="CollisionShape2D" parent="Sides"]
position = Vector2( 50.8383, -417.501 )
shape = SubResource( 1 )

[node name="RightSideCollision" type="CollisionShape2D" parent="Sides"]
position = Vector2( 240.838, -417.501 )
shape = SubResource( 1 )

[node name="PowerIndicator" parent="." instance=ExtResource( 2 )]

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.567
one_shot = true

[node name="CatchMarkerPosition" type="Position2D" parent="."]
position = Vector2( 160, 10 )

[node name="FishMarkerPosition" type="Position2D" parent="."]
position = Vector2( 5, 10 )
[connection signal="area_entered" from="Sides" to="." method="_on_Sides_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
